@@ -28,6 +28,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.0/
    `genshi.template` package.
  * Results of expression evaluation are no longer implicitly called if they
    are callable.
+ * Instances of the `genshi.core.Attrs` class are now immutable (they are
+   subclasses of `tuple` instead of `list`).
 
 Version 0.3.4
 http://svn.edgewall.org/repos/genshi/tags/0.3.4/
